--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <!-- Position Column -->
       <ng-container matColumnDef="fullName">
         <th mat-header-cell *matHeaderCellDef> Full Name. </th>
-        <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.owner}} </td>
       </ng-container>
   
       <!-- Position Column -->
