--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<app-authorized>
+  <ng-container authorized> </ng-container>
+  <ng-container unauthorized>
+    <h1>Unauthorized</h1>
+  </ng-container>
+</app-authorized>
+
 <div class="main">
   <h1>Employee List</h1>
   <button mat-raised-button color="primary" (click)="dialogNewEmployee()">New Employee</button>
