--- a/src/app/security/authorized/authorized.component.html
+++ b/src/app/security/authorized/authorized.component.html
@@ -1,3 +1,5 @@
 @if(isAuthorized()) {
 <ng-content select="[authorized]"></ng-content>
+}@else{
+<ng-content select="[unauthorized]"></ng-content>
 }
